# ninfo-plugin-ldap

./: MANIFEST.in  README.md  pyproject.toml  setup.py
ninfo_plugin_ldap/: __init__.py  ldap_template_html.mako  ldap_template_text.mako  uwdir_template_text.mako
