[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ninfo-plugin-ldap"
version = "1.0.0"
description = "LDAP plugin for ninfo"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Mike", email = "mike@snowcrash.ca" },
    { name = "Justin Azoff", email = "justin.azoff@gmail.com" },
    { name = "Ryan Goggin", email = "support@ryangoggin.net" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "ninfo>=0.1.11",
    "ldap3",
]

[project.entry-points."ninfo.plugin"]
ldap = "ninfo_plugin_ldap"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
ninfo_plugin_ldap = ["*.mako"]
